--- a/pom.xml
+++ b/pom.xml
@@ -56,12 +56,12 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.13</version>
+            <version>[4.5.13,)</version>
         </dependency>
         <dependency>
             <groupId>xerces</groupId>
             <artifactId>xercesImpl</artifactId>
-            <version>2.12.0</version>
+            <version>[2.12.2,)</version>
         </dependency>
         <dependency>
             <groupId>xml-apis</groupId>
