--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.maxipago</groupId>
     <artifactId>sdk-java-v2</artifactId>
-    <version>2.1.7</version>
+    <version>2.2.0</version>
 
     <build>
         <plugins>
@@ -52,6 +52,11 @@
             <groupId>xerces</groupId>
             <artifactId>xercesImpl</artifactId>
             <version>[2.12.2,)</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
         </dependency>
         <dependency>
 			<groupId>junit</groupId>
